added appspot project

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@ body, html {background:#3D3C3C;margin-top:150px}
 <img src="veeqo-logo.png">
 <img src="logo.svg">
 <img src="investor.uk-05-08-2015.png">
+<img src="fuzmo.png" style="width:100px">
+
+<img src="skippr.png">
 <img src="in-my-school-logo.png">
 <img src="nanook.png">
 <img src="isee.png">
